--- a/hello-world/sprite2bpp.mustache
+++ b/hello-world/sprite2bpp.mustache
@@ -1,8 +1,8 @@
 {{#sprites}}
 // {{name}} 
-// (should be BLIT_1BPP, is {{flagsHumanReadable}})
+// (should be BLIT_2PP, is {{flagsHumanReadable}})
 const {{rustName}}_TEXTURE_DATA: [u8; {{length}}] = [ {{bytes}} ];
-const {{rustName}}_TEXTURE: Texture2Color<'static> = Texture2Color {
+const {{rustName}}_TEXTURE: Texture4Color<'static> = Texture4Color {
     data: &{{rustName}}_TEXTURE_DATA,
     stride: {{width}}
 }
