Add a custom pixel font renderer
- I admittedly do not care for WASM-4's built-in font. This allows me to load my own custom font instead.
- Supply a sample 7x5 bold font. I might also bring in a 3x5 upper-case-only font (basically PICO-8's or TI's font).

--- a/hello-world/sprite2bpp.mustache
+++ b/hello-world/sprite2bpp.mustache
@@ -4,6 +4,7 @@
 const {{rustName}}_TEXTURE_DATA: [u8; {{length}}] = [ {{bytes}} ];
 const {{rustName}}_TEXTURE: Texture4Color<'static> = Texture4Color {
     data: &{{rustName}}_TEXTURE_DATA,
-    stride: {{width}}
-}
+    stride: {{width}},
+    height: {{height}}
+};
 {{/sprites}}
