--- a/hello-world/sprite1bpp.mustache
+++ b/hello-world/sprite1bpp.mustache
@@ -4,6 +4,7 @@
 const {{rustName}}_TEXTURE_DATA: [u8; {{length}}] = [ {{bytes}} ];
 const {{rustName}}_TEXTURE: Texture2Color<'static> = Texture2Color {
     data: &{{rustName}}_TEXTURE_DATA,
-    stride: {{width}}
-}
+    stride: {{width}},
+    height: {{height}}
+};
 {{/sprites}}
